# Audio-visualizer

./: README.md  package-lock.json
audio-visualizer/: package-lock.json  package.json
audio-visualizer/src-tauri/: Cargo.toml  tauri.conf.json
audio-visualizer/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
